- Finished Basket - Fixed the background behind footer triangles not filling space

--- a/css/basket.scss
+++ b/css/basket.scss
@@ -1,40 +1,117 @@
 // For the basket flow of the site
 // Review basket page /shop/reviewbasket/
 #reviewbasket {
-    h1 {
-        display: none;
-    }
-    td {
-        border-left: none !important;
-        border-bottom: none !important;
-        border-right: none !important;
-        vertical-align: middle;
-    }
-    tr {
-        td {
-            border-right: 1px solid #d2d2d2 !important;
-        }
-        td:last-of-type {
-            border-right: none !important;
-        }
-    }
-    #ctl00_Main_pnlSavedItems {
-        border: none;
-        background: #f1f1f1;
-        border-radius: 0 !important;
-    }
-    .footer {
-        td {
-            background: none !important;
-            color: #000 !important;
-            &.total {
-                color: $union_green !important;
-            }
-        }
-    }
-    .checkout_next {
-        input {
-            padding: 0.4em 0.8em !important;
-        }
-    }
+	h1 {
+		display: none;
+	}
+}
+
+#reviewbasket, #checkout {
+	td {
+		border-left: none !important;
+		border-bottom: none !important;
+		border-right: none !important;
+		vertical-align: middle;
+	}
+	tr {
+		td {
+			border-right: 1px solid #d2d2d2 !important;
+			a {
+				font-size: 1em;
+			}
+		}
+		td:last-of-type {
+			border-right: none !important;
+		}
+	}
+	#ctl00_Main_pnlSavedItems {
+		border: none;
+		background: #f1f1f1;
+		border-radius: 0 !important;
+	}
+	.footer {
+		td {
+			background: none !important;
+			color: #000 !important;
+			&.total {
+				color: $union_green !important;
+			}
+		}
+	}
+	.checkout_next, #nopay {
+		input {
+			padding: 0.4em 0.8em !important;
+			border-radius: 0 !important;
+	    border: none !important;
+		}
+	}
+	#ctl00_Main_pnlSavedItems {
+		position: relative;
+		padding: 0.2em 1em;
+		&:before {
+			position: absolute;
+			top: 8px;
+			right: 8px;
+			content: 'save';
+			@include googleFont;
+			font-size: 2.4em;
+			color: #999;
+		}
+	}
+}
+
+.page_shop.page_customise {
+	select {
+		padding: 0.2em 0.4em;
+	}
+	.vpFormSubmit {
+		background: none !important;
+		border-top: none;
+		margin: 0;
+	}
+}
+
+.page_shop.page_checkout .info .span3 {
+	background-color: #eee;
+	padding: 0.6em 1em;
+	margin: 0.8em 0 0 0;
+}
+
+#checkout {
+	h1 {
+		display: none;
+	}
+	#checkout_progress {
+		li {
+			a {
+				border: none;
+				background: none;
+				border-radius: 0;
+				color: $union_green;
+				&:hover {
+					background-color: $union_green_hover_clear;
+				}
+				&.basket, &.customisation {
+					padding: 0.4em 0.6em;
+					text-decoration: none;
+					@include displayFlex;
+					@include flexAlign(center);
+					&:before {
+						@include googleFont;
+						padding-right: 0.2em;
+					}
+				}
+				&.basket {
+					&:before {
+						content: 'shopping_basket';
+					}
+				}
+				&.customisation {
+					&:before {
+						content: 'settings';
+					}
+				}
+			}
+		}
+	}
 }
