--- a/css/style.css
+++ b/css/style.css
@@ -885,6 +885,8 @@ main {
       padding: 0; }
     main section.row.header h2 {
       font-size: 2.6em; }
+  main section:last-of-type {
+    padding-bottom: 200px !important; }
 
 /* Tablets*/
 @media (min-width: 48em) {
@@ -954,8 +956,7 @@ main {
 footer {
   position: relative;
   background-color: #54827c;
-  min-height: 200px;
-  margin-top: 200px; }
+  min-height: 200px; }
   footer:before {
     content: '';
     position: absolute;
@@ -964,7 +965,8 @@ footer {
     width: 0;
     height: 0;
     border-bottom: 200px solid #54827c;
-    border-right: 99vw solid transparent; }
+    border-right: 99vw solid transparent;
+    z-index: 1; }
   footer:after {
     content: '';
     position: absolute;
@@ -974,7 +976,7 @@ footer {
     height: 0;
     border-bottom: 180px solid #426661;
     border-left: 70vw solid transparent;
-    z-index: -100; }
+    z-index: 0; }
   footer #footerLinks {
     padding-bottom: 2em; }
     footer #footerLinks h2, footer #footerLinks a, footer #footerLinks p {
@@ -2835,31 +2837,117 @@ input#ctl00_Main_btnRecipients {
 #reviewbasket h1 {
   display: none; }
 
-#reviewbasket td {
+#reviewbasket td, #checkout td {
   border-left: none !important;
   border-bottom: none !important;
   border-right: none !important;
   vertical-align: middle; }
 
-#reviewbasket tr td {
+#reviewbasket tr td, #checkout tr td {
   border-right: 1px solid #d2d2d2 !important; }
+  #reviewbasket tr td a, #checkout tr td a {
+    font-size: 1em; }
 
-#reviewbasket tr td:last-of-type {
+#reviewbasket tr td:last-of-type, #checkout tr td:last-of-type {
   border-right: none !important; }
 
-#reviewbasket #ctl00_Main_pnlSavedItems {
+#reviewbasket #ctl00_Main_pnlSavedItems, #checkout #ctl00_Main_pnlSavedItems {
   border: none;
   background: #f1f1f1;
   border-radius: 0 !important; }
 
-#reviewbasket .footer td {
+#reviewbasket .footer td, #checkout .footer td {
   background: none !important;
   color: #000 !important; }
-  #reviewbasket .footer td.total {
+  #reviewbasket .footer td.total, #checkout .footer td.total {
     color: #50b848 !important; }
 
-#reviewbasket .checkout_next input {
-  padding: 0.4em 0.8em !important; }
+#reviewbasket .checkout_next input, #reviewbasket #nopay input, #checkout .checkout_next input, #checkout #nopay input {
+  padding: 0.4em 0.8em !important;
+  border-radius: 0 !important;
+  border: none !important; }
+
+#reviewbasket #ctl00_Main_pnlSavedItems, #checkout #ctl00_Main_pnlSavedItems {
+  position: relative;
+  padding: 0.2em 1em; }
+  #reviewbasket #ctl00_Main_pnlSavedItems:before, #checkout #ctl00_Main_pnlSavedItems:before {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    content: 'save';
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+    text-align: center;
+    font-size: 2.4em;
+    color: #999; }
+
+.page_shop.page_customise select {
+  padding: 0.2em 0.4em; }
+
+.page_shop.page_customise .vpFormSubmit {
+  background: none !important;
+  border-top: none;
+  margin: 0; }
+
+.page_shop.page_checkout .info .span3 {
+  background-color: #eee;
+  padding: 0.6em 1em;
+  margin: 0.8em 0 0 0; }
+
+#checkout h1 {
+  display: none; }
+
+#checkout #checkout_progress li a {
+  border: none;
+  background: none;
+  border-radius: 0;
+  color: #50b848; }
+  #checkout #checkout_progress li a:hover {
+    background-color: rgba(80, 184, 72, 0.2); }
+  #checkout #checkout_progress li a.basket, #checkout #checkout_progress li a.customisation {
+    padding: 0.4em 0.6em;
+    text-decoration: none;
+    display: -webkit-box ;
+    display: -ms-flexbox ;
+    display: -webkit-flex ;
+    display: flex ;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center; }
+    #checkout #checkout_progress li a.basket:before, #checkout #checkout_progress li a.customisation:before {
+      font-family: 'Material Icons';
+      font-weight: normal;
+      font-style: normal;
+      font-size: 24px;
+      line-height: 1;
+      letter-spacing: normal;
+      text-transform: none;
+      display: inline-block;
+      white-space: nowrap;
+      word-wrap: normal;
+      direction: ltr;
+      -webkit-font-feature-settings: 'liga';
+      font-feature-settings: 'liga';
+      -webkit-font-smoothing: antialiased;
+      text-align: center;
+      padding-right: 0.2em; }
+  #checkout #checkout_progress li a.basket:before {
+    content: 'shopping_basket'; }
+  #checkout #checkout_progress li a.customisation:before {
+    content: 'settings'; }
 
 /* Dashboard */
 /* Get Involved Dashboard */
